# autoware.universe

control/stanley/: CMakeLists.txt  package.xml
control/stanley/design/: stanley.md  stanley_lateral_controller.md
control/stanley/include/stanley/: stanley.hpp  stanley_lateral_controller.hpp  stanley_utils.hpp
control/stanley/launch/: stanley.launch.py
control/stanley/src/: stanley_lateral_controller.cpp
control/stanley/src/stanley_core/: stanley.cpp  stanley_utils.cpp
control/trajectory_follower_nodes/: package.xml
control/trajectory_follower_nodes/include/trajectory_follower_nodes/: controller_node.hpp
control/trajectory_follower_nodes/src/: controller_node.cpp
latest/planning/behavior_velocity_planner/virtual-traffic-light-design/: index.html
latest/system/dummy_infrastructure/: index.html
latest/system/system_error_monitor/: index.html
launch/tier4_control_launch/config/trajectory_follower/: lateral_controller.param.yaml
main/planning/behavior_velocity_planner/virtual-traffic-light-design/: index.html
main/search/: search_index.json
main/system/system_error_monitor/: index.html
main/system/velodyne_monitor/Readme/: index.html
